fixing the sidebar overlap

--- a/src/components/styles/profileMenu.css
+++ b/src/components/styles/profileMenu.css
@@ -5,9 +5,12 @@
     
     background: #3d3d3d;
     position: relative;
-    top: 3.1em;
     width: 100%;
     padding: 2em 0;
+
+    box-sizing: border-box;
+
+    margin-top: 3.1em;
 }
 
 .profile-menu-props{
