--- a/src/components/styles/sidebar.css
+++ b/src/components/styles/sidebar.css
@@ -1,14 +1,19 @@
 .sidebar{
     font-size: 62.5%;
     width: 33.1em;
-    height: 100vh;
+    height: 100svh;
     background: linear-gradient(135deg, rgba(73,73,73,1) 0%, rgba(73,73,73,0) 100%);
     
     border-right: 1px solid;
     border-image: linear-gradient(45deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.2) 100%);
     border-image-slice: 1;
 
-    position: relative;
+    position: fixed;
 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
+
 
